# utoipa-ts

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: axum.d.ts  axum.rs  axum.ts  comprehensive.d.ts  comprehensive.rs  simple.d.ts  simple.rs  simple.ts
src/: lib.rs
types/axum/: api.ts
types/simple/: api.ts
utoipa-ts-macros/: Cargo.toml
utoipa-ts-macros/src/: lib.rs
