[package]
name = "utoipa-ts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Generate TypeScript API definitions from utoipa paths"

[workspace]
resolver = "3"
members = ["utoipa-ts-macros"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ImShyMike/utoipa-ts"

[dependencies]
inventory = "0.3.24"
ts-rs = "12.0.1"
utoipa = { version = "5.5.0", features = ["macros"] }
utoipa-ts-macros = { version = "0.1.0", path = "utoipa-ts-macros" }

[dev-dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
utoipa-axum = "0.2.0"
